--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         </div>
     </div>
 
+    <!-- Math engine -->
+    <script src="src/mathEngine/utils.js"></script>
+    <script src="src/mathEngine/complex.js"></script>
+
     <!-- Scripts -->
     <script src="src/keymap.js"></script>
     <script src="src/storage.js"></script>
