--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <!-- Math engine -->
     <script src="src/mathEngine/utils.js"></script>
     <script src="src/mathEngine/complex.js"></script>
+    <script src="src/mathEngine/integration.js"></script>
+    <script src="src/mathEngine/solver.js"></script>
 
     <!-- Scripts -->
     <script src="src/keymap.js"></script>
