--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     <script src="src/mathEngine/complex.js"></script>
     <script src="src/mathEngine/integration.js"></script>
     <script src="src/mathEngine/solver.js"></script>
+    <script src="src/mathEngine/matrix.js"></script>
+    <script src="src/mathEngine/stats.js"></script>
 
     <!-- Scripts -->
     <script src="src/keymap.js"></script>
