--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script src="src/mathEngine/solver.js"></script>
     <script src="src/mathEngine/matrix.js"></script>
     <script src="src/mathEngine/stats.js"></script>
+    <script src="src/mathEngine/base.js"></script>
 
     <!-- Scripts -->
     <script src="src/keymap.js"></script>
