--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     <script src="src/displayRenderer.js"></script>
     <script src="src/domRenderer.js"></script>
     <script src="src/inputController.js"></script>
+    <script src="src/modes.js"></script>
+    <script src="src/memory.js"></script>
     <script src="src/app.js"></script>
 </body>
 </html>
